--- a/style.css
+++ b/style.css
@@ -1,71 +1,124 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Roboto:wght@100;300;400;700&family=Ubuntu:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500;1,700&display=swap');
-
-* {
+*{
     box-sizing: border-box;
-    padding: 0;
     margin: 0;
-    font-family: 'Poppins', sans-serif;
+    padding: 0;
 }
-
-.container {
+body{
+    width: 100vw;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    background-color: #020d45;
+    background: linear-gradient(90deg,#5936b4 0%,#362a84 100%);
+    color: #222;
+    font-size: 1rem;
+}
+
+.temperature-converter{
+    background: #fff;
+    position: relative;
+    width: 100%;
+    min-width: 320px;
+    padding: 20px 25px 45px;
+    border-radius: 5px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    box-shadow: -5px -5px 250px 0 rgba(255, 255, 255, 0.02)inset;
+    backdrop-filter: blur(21px);
+}
+.mobile{
+    display: flex;
+    justify-content: space-between;
+    font-size: 18px;
+    font-weight: 700;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.title{
+    color: #222;
+    font-size: 1.5rem;
     text-align: center;
-    background-color: azure;
 }
 
-#calcTemp {
-    padding: 29px 67px;
-    min-height: 290px;
-    background-color: #cdd8fd;
-    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+.result{
+    text-align: center;
+    margin: 20px 0;
 }
 
-label {
-    font-size: 30px;
-    line-height: 78px;
+.result-heading{
+    color: #555;
+    font-size: 1rem;
+    font-weight: 600;
 }
 
-#temp {
-    width: 110px;
-    height: 34px;
-    border-radius: 5px;
-    margin: 12px;
+.Celsius-value{
+    border-bottom: 2px solid #ccc;
+    padding: 10px;
+    transition: all .45s ease;
+}
+.degree-type{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 0;
+}
+
+.degree-field{
+    display: flex;
+    flex-direction: column;
+    width: 46%;
+}
+
+label{
+    color: #555;
+    font-size: .8rem;
+    margin-bottom: 5px;
+}
+
+input, select{
+    background: transparent;
+    border: none;
+    outline: none;
+    border-bottom: 2px solid #ccc;
     padding: 8px;
-    font-size: 20px;
-    font-weight: 500;
+    margin-bottom: 15px;
+}
+input:focus{
+    border: 1px solid #4c49f3;
+}
+
+option{
+    background: #3c39e7;
+    color: #f6f6f6;
+}
+
+#convert-btn{
     border: none;
     outline: none;
-}
-
-#temp_diff {
-    width: 120px;
-    height: 34px;
     border-radius: 5px;
-    margin: 12px;
-    font-size: 18px;
-    font-weight: 500;
-    border: none;
-    outline: none;
+    background: linear-gradient(to bottom, #3633f3,#120fb9);
+    color: #f6f6f6;
+    padding: 12px 80px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    margin-top: 10px;
+    transition:all .3s ease-in;
+    text-transform: uppercase;
+    cursor:pointer;
 }
 
-#submit {
-    width: 100px;
-    border-radius: 5px;
-    margin: 30px 0 20px 0;
-    font-size: 18px;
-    background-color: rgb(229, 244, 232);
-    padding: 5px;
-    transition: all 0.5s ease;
+#convert-btn:hover{
+    background: linear-gradient(to bottom, #4a47e4, #322fda);
 }
 
-#submit:hover{
-    background-color: rgb(230, 210, 184);
-    cursor: pointer;
+.fa{
+    margin-left: -12px;
+    margin-right: 8px;
 }
-
-#result{
-    font-size: 27px;
+.loading{
+    display: none;
 }
